align mobile app top bar bugfix

--- a/portfolio_site/static/css/style.css
+++ b/portfolio_site/static/css/style.css
@@ -235,7 +235,7 @@ footer p {
         flex-direction:column;
         background-color:#000000e6;
         position:absolute;
-        top:60px;
+        top:75px;
         left:0;
         width:100%;
         visibility:hidden;
